--- a/Gui/MainProgram.ui
+++ b/Gui/MainProgram.ui
@@ -142,7 +142,7 @@ p, li { white-space: pre-wrap; }
    <widget class="QPushButton" name="send_request_button">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>160</x>
       <y>470</y>
       <width>181</width>
       <height>71</height>
@@ -150,6 +150,19 @@ p, li { white-space: pre-wrap; }
     </property>
     <property name="text">
      <string>Send Request</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="listen_button">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>470</y>
+      <width>181</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Listen For Requests</string>
     </property>
    </widget>
   </widget>
